More edits, and getting sick of them

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -116,7 +116,7 @@ Gain programmatic access to platform resources. The API supports integration wit
 
 ### Testing & documentation
 
-Integrate the {{< var validmind.developer >}} with other development platforms to to run tests and test suites, generate documentation, and support ongoing monitoring. See the results locally or upload them to the {{< var validmind.platform >}}.
+Integrate the {{< var validmind.developer >}} with other development platforms to run tests and test suites, generate documentation, and support ongoing monitoring. See the results locally or upload them to the {{< var validmind.platform >}}.
 
 **Supported**
 
