Fix all the small tedious mistakes, I hate my life

--- a/site/guide/integrations/configure-connections.qmd
+++ b/site/guide/integrations/configure-connections.qmd
@@ -70,20 +70,20 @@ Requires:
 
 2. Go to **Settings** > **Integrations** > **Connections**.
 
-2. Click **{{< fa plus >}} Add Connection**.
+3. Click **{{< fa plus >}} Add Connection**.
 
-3. In the modal that opens, select one of the supported connection, such as MLflow or Jira.
+4. In the modal that opens, select one of the supported connections, such as MLflow or Jira.
 
-4. In the modal that opens, complete:
+5. Complete:
 
    - **Integration name** — How other admins can identify the connection.
-   - **Description** (optional)— The intended usage or additional details.
+   - **Description** (optional) — The intended usage or additional details.
    - [**Connection-specific fields**](#supported-connections), such as:
       - **Credentials** — The secret that stores the API key, password, or token required by the external service.
       - **Board IDs**, **Project IDs**, or **URIs** — The identifiers needed for the connection.
    - **Status** — Set to `Operational` to enable immediately or `Disabled` if you plan to finish setup later.
 
-5. Click **Save Integration**. 
+6. Click **Save Integration**. 
 
 You can now [test the connection](#test-connections) to ensure it is working as expected.
 
