--- a/site/guide/integrations/manage-secrets.qmd
+++ b/site/guide/integrations/manage-secrets.qmd
@@ -81,15 +81,15 @@ Revocation immediately disables the secret so it can no longer be used, but does
 
 ## Delete secrets
 
-1. In the left sidebar click **{{< fa gear >}} Settings**.
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
 2. Go to **Integrations** > **Secrets**.
 
 3. Hover over the secret you want to remove.
 
-4. When **{{< fa ellipsis-vertical >}}** appears click it then select **{{< fa trash >}} Delete**.
+4. When **{{< fa ellipsis-vertical >}}** appears, click it, then select **{{< fa trash >}} Delete**.
 
-5. In the confirmation dialog select **OK** to confirm deletion.
+5. In the confirmation dialog, select **OK** to confirm deletion.
 
 Deletion removes the secret permanently so that it no longer appears on the platform.
 
