--- a/site/guide/integrations/usage-examples.qmd
+++ b/site/guide/integrations/usage-examples.qmd
@@ -35,7 +35,7 @@ To create a Jira ticket when model validation requires attention:
 
 1. Under **Settings** > **Workflows**, open the workflow you want to modify.
 
-2. From the **Workflow Steps** modal, drag and drop an **HTTP Request** step onto the canvas, then connect it your workflow.
+2. From the **Workflow Steps** modal, drag and drop an **HTTP Request** step onto the canvas, then connect it to your workflow.
 
 3. Double-click the step to open the **Configure HTTP Request** modal.
 
@@ -74,7 +74,7 @@ To create a ServiceNow incident when a data drift issue is detected during ongoi
 
 1. Under **Settings** > **Workflows**, open the workflow you want to modify.
 
-2. From the **Workflow Steps** modal, drag and drop an **HTTP Request** step onto the canvas, then connect it your workflow.
+2. From the **Workflow Steps** modal, drag and drop an **HTTP Request** step onto the canvas, then connect it to your workflow.
 
 3. Double-click the step to open the **Configure HTTP Request** modal.
 
@@ -111,7 +111,7 @@ To start a {{< var vm.product >}} workflow from an external system:
 
 1. Add a new workflow, selecting the **Via Webhook** workflow start option.[^5]
 
-2. From the **Workflow Steps** modal, drag and drop a **Webhook** step onto the canvas, then connect it your workflow.
+2. From the **Workflow Steps** modal, drag and drop a **Webhook** step onto the canvas, then connect it to your workflow.
 
 3. Double-click the step to open the **Webhook Step Trigger** modal.
 
@@ -156,7 +156,7 @@ To trigger a waiting {{< var vm.product >}} workflow step to continue from an ex
 
 1. Open the workflow you want to configure, or add a new workflow.[^5]
 
-2. From the **Workflow Steps** modal, drag and drop a **Webhook** step onto the canvas, then connect it your workflow.
+2. From the **Workflow Steps** modal, drag and drop a **Webhook** step onto the canvas, then connect it to your workflow.
 
 3. Double-click the step to open the **Webhook Step Trigger** modal.
 
