Re-add context I had removed

--- a/site/guide/integrations/usage-examples.qmd
+++ b/site/guide/integrations/usage-examples.qmd
@@ -10,6 +10,14 @@ Adapt these integration usage examples for your own workflows to interact with e
 - [Start workflows via webhook](#start-workflows-via-webhook)
 - [Add webhook step triggers](#add-webhook-step-triggers)
 
+These examples use HTTP request and webhook steps to integrate with external systems:
+
+- An *HTTP request* step sends data from {{< var vm.product >}} to another service. A workflow can notify a partner tool when a model reaches a certain state or request an update in an external system. This pattern is useful when {{< var vm.product >}} owns the event and needs to push it outward.
+
+-A *webhook* step does the opposite. Another system sends a POST request to  start a {{< var vm.product >}} workflow or to continue a workflow that is paused while waiting for a webhook to continue. This lets external tools trigger actions inside {{< var vm.product >}} when an event occurs on their side.
+
+Together these steps support event-driven data exchange that allows external systems to interact with the {{< var validmind.product >}}.
+
 ::: {.attn}
 
 ## Prerequisites
