Address early review feedback from Beck

--- a/site/guide/integrations/integrations-examples.qmd
+++ b/site/guide/integrations/integrations-examples.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Usage examples"
+title: "Integrations examples"
 date: last-modified
 ---
 
@@ -38,7 +38,7 @@ Together these steps support event-driven data exchange that allows external sys
 To create a Jira ticket when model validation requires attention:
 
 ::: {.column-margin}
-![Create a Jira issue](usage-examples-http-request-open-jira-ticket.png){width=80% fig-alt="Screenshot of the HTTP request step configured to create a Jira ticket, showing the required fields described in step 4." .screenshot}
+![Create a Jira issue](integrations-examples-http-request-open-jira-ticket.png){width=80% fig-alt="Screenshot of the HTTP request step configured to create a Jira ticket, showing the required fields described in step 4." .screenshot}
 :::
 
 1. Under **Settings** > **Workflows**, open the workflow you want to modify.
@@ -89,7 +89,7 @@ To create a ServiceNow incident when a data drift issue is detected during ongoi
 4. Configure the required fields, replacing the placeholder values with your own:
 
 ::: {.column-margin}
-![Create a ServiceNow incident](usage-examples-http-request-open-servicenow-incident.png){width=80% fig-alt="Screenshot of the HTTP request step configured to create a ServiceNow incident, showing the required fields described in step 4." .screenshot}
+![Create a ServiceNow incident](integrations-examples-http-request-open-servicenow-incident.png){width=80% fig-alt="Screenshot of the HTTP request step configured to create a ServiceNow incident, showing the required fields described in step 4." .screenshot}
 :::
 
    - **URL** — `https://yourinstance.service-now.com/api/now/table/incident`
