--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -11,7 +11,7 @@ listing:
     contents:
       - manage-secrets.qmd 
       - configure-connections.qmd
-      - usage-examples.qmd
+      - integrations-examples.qmd
 ---
 
 Integrations connect the {{< var validmind.platform >}} with external systems or services, enabling bidirectional data synchronization, workflow automation, and API access.
@@ -40,7 +40,7 @@ graph TD
 
 ### Analytics and reporting
 
-Access built-in analytics and dashboards. Or, import analytics data into external reporting tools to build unified reports that combine {{< var vm.product >}} insights with other sources.
+Access built-in analytics and dashboards. Or, import analytics data into external reporting tools to build unified reports that combine {{< var vm.product >}} insights with other sources.[^1]
 
 **Supported**
 
@@ -51,17 +51,17 @@ Access built-in analytics and dashboards. Or, import analytics data into externa
 :::
 
 ::: {.w-33-ns}
-- Looker ([coming soon]{.smallcaps})
+- Looker <br>[coming soon]{.smallercaps}
 :::
 
 ::: {.w-33-ns}
-- Snowflake ([coming soon]{.smallcaps})
+- Snowflake <br>[coming soon]{.smallercaps}
 :::
 ::::
 
 ### Model inventory
 
-Link to models in external registries and development platforms and keep inventories synced with versions, inventory fields, and other metadata.
+Link to models in external registries and development platforms and keep inventories synced with versions, inventory fields, and other metadata.[^2]
 
 **Supported**
 
@@ -69,12 +69,12 @@ Link to models in external registries and development platforms and keep invento
 
 ::: {.w-33-ns}
 - AWS SageMaker
-- Databricks ([coming soon]{.smallcaps})
+- Databricks <br>[coming soon]{.smallercaps}
 :::
 
 ::: {.w-33-ns}
 - MLflow
-- AWS Bedrock ([coming soon]{.smallcaps})
+- AWS Bedrock <br>[coming soon]{.smallercaps}
 :::
 
 ::: {.w-33-ns}
@@ -84,17 +84,27 @@ Link to models in external registries and development platforms and keep invento
 
 ### Workflows
 
+Manage model lifecycles by configuring workflows to transition models through your organization’s custom model stages.[^3]
+
 ::: {.column-margin}
 ![Workflow integration example](simple-integrations-workflow.png){width=80% fig-alt="A workflow showing an automation sequence. A green start node runs an HTTP request that sends a POST to https://some.example.com/request. The workflow then moves to a webhook step that pauses until a webhook call is received. Once the webhook arrives, the flow continues to a red end node." .screenshot}
 :::
 
-**From {{< var vm.product >}}:** Send HTTP requests to external services when a model reaches a specific state or needs to trigger updates elsewhere.
+:::: {.flex .flex-wrap}
+::: {.w-50}
+**From {{< var vm.product >}}**  
+Send HTTP requests to external services when a model reaches a specific state or to trigger updates in other systems.
+:::
 
-**From external systems:** Send webhooks (POST requests) to start {{< var vm.product >}} workflows or resume workflows that are paused and waiting for input.
+::: {.w-50}
+**From external systems**  
+Send webhooks (POST requests) into {{< var vm.product >}} to start workflows or to resume workflows that are paused and waiting for input.
+:::
+::::
 
 ### Public REST API
 
-Gain programmatic access to platform resources. The API supports integration with custom scripts, automation tools, and external platforms that need direct access to {{< var vm.product >}}.
+Gain programmatic access to platform resources. The API supports integration with custom scripts, automation tools, and external platforms that need direct access to {{< var vm.product >}}.[^4]
 
 **CRUD examples**
 
@@ -116,7 +126,7 @@ Gain programmatic access to platform resources. The API supports integration wit
 
 ### Testing & documentation
 
-Integrate the {{< var validmind.developer >}} with other development platforms to run tests and test suites, generate documentation, and support ongoing monitoring. See the results locally or upload them to the {{< var validmind.platform >}}.
+Integrate the {{< var validmind.developer >}} with other development platforms to run tests and test suites, generate documentation, and support ongoing monitoring. See the results locally or upload them to the {{< var validmind.platform >}}.[^5]
 
 **Supported**
 
@@ -188,3 +198,11 @@ Link to tickets in external systems and keep them synchronized. Attach tickets t
 
 :::{#integrations-listing}
 :::
+
+<!-- FOOTNOTES -->
+
+[^1]: [Analytics and reporting](/guide/reporting/working-with-analytics.qmd)
+[^2]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
+[^3]: [Introduction to workflows](/guide/workflows/introduction-to-workflows.qmd)
+[^4]: [Public REST API](/reference/validmind-rest-api-vm.qmd)
+[^5]: [Testing & documentation](/developer/validmind-library.qmd)
