--- a/site/guide/workflows/workflow-configuration-examples.qmd
+++ b/site/guide/workflows/workflow-configuration-examples.qmd
@@ -50,6 +50,10 @@ This workflow is initiated when a field is populated — in this case, when the 
 
 :::
 
+::: {.callout-tip title="Looking to integrate with external systems?"}
+See: [Integrations examples](/guide/integrations/integrations-examples.qmd)
+:::
+
 ## Workflow step type examples
 
 Detail views of the demo workflow step types[^11] used in the example workflows:
