--- a/site/guide/workflows/workflow-step-types.qmd
+++ b/site/guide/workflows/workflow-step-types.qmd
@@ -6,7 +6,10 @@ date: last-modified
 Select from a variety of workflow step types to build workflows from.
 
 ::: {.callout}
-For more assistance configuring workflow step types, refer to our [Workflow configuration examples](workflow-configuration-examples.qmd#workflow-step-type-examples).
+For more assistance configuring workflow step types, refer to:
+
+- [Workflow configuration examples](workflow-configuration-examples.qmd#workflow-step-type-examples)
+- [Integrations examples](/guide/integrations/integrations-examples.qmd)
 :::
 
 {{< include /guide/workflows/_workflow-step-types.qmd >}}
