Final edits, maybe

--- a/site/guide/integrations/configure-connections.qmd
+++ b/site/guide/integrations/configure-connections.qmd
@@ -3,7 +3,9 @@ title: "Configure connections"
 date: last-modified
 ---
 
-Connections link {{< var vm.product >}} with the external systems your teams already use. Each connection enables you to authenticate and keep events flowing between platforms such as Jira, ServiceNow, AWS SageMaker, MLflow, and GitLab.
+Connections link {{< var vm.product >}} with the external systems your teams already use. 
+
+Each connection enables you to authenticate and keep events flowing between platforms such as Jira, ServiceNow, AWS SageMaker, MLflow, and GitLab.
 
 ::: {.attn}
 
@@ -136,7 +138,8 @@ If the test is successful, the message **{{< fa check-circle >}} Connection succ
 
 5. In the confirmation dialog, select **OK** to confirm deletion.
 
-Deletion removes the connection permanently so that it no longer appears on the platform.
+::: {.callout-warning title="Deleting a connection is permanent."}
+:::
 
 <!-- FOOTNOTES -->
 
