--- a/site/guide/integrations/integrations-examples.qmd
+++ b/site/guide/integrations/integrations-examples.qmd
@@ -3,7 +3,7 @@ title: "Integrations examples"
 date: last-modified
 ---
 
-Adapt these integration usage examples for your own workflows to interact with external systems.
+Adapt these usage examples for your own workflows to interact with external systems.
 
 - [Create a Jira ticket](#create-a-jira-ticket)
 - [Create a ServiceNow incident](#create-a-servicenow-incident)
