--- a/site/guide/integrations/manage-secrets.qmd
+++ b/site/guide/integrations/manage-secrets.qmd
@@ -3,7 +3,9 @@ title: "Manage secrets"
 date: last-modified
 ---
 
-Secrets centralize the credentials your integrations need so you can reference encrypted secrets without pasting them into every connection configuration. You store each secret once and then reuse it across supported integrations.
+Secrets centralize the credentials for your integrations so you can reference them in connection configurations. 
+
+You store each secret once and then reuse it across supported integrations.
 
 ::: {.attn}
 
@@ -91,7 +93,9 @@ Revocation immediately disables the secret so it can no longer be used, but does
 
 5. In the confirmation dialog, select **OK** to confirm deletion.
 
-Deletion removes the secret permanently so that it no longer appears on the platform.
+::: {.callout-warning title="Deleting a secret is permanent."}
+Be sure to update any connections that depend on this secret before deleting it.
+:::
 
 <!-- FOOTNOTES -->
 
