--- a/site/guide/workflows/workflow-configuration-examples.qmd
+++ b/site/guide/workflows/workflow-configuration-examples.qmd
@@ -50,8 +50,8 @@ This workflow is initiated when a field is populated — in this case, when the 
 
 :::
 
-::: {.callout-tip title="Looking to integrate with external systems?"}
-See: [Integrations examples](/guide/integrations/integrations-examples.qmd)
+::: {.callout-tip title="Need to integrate workflows with external systems?"}
+For more information, see [Integrations examples](/guide/integrations/integrations-examples.qmd).
 :::
 
 ## Workflow step type examples
