Address first batch of review comments

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -47,15 +47,15 @@ Access built-in analytics and dashboards. Or, import analytics data into externa
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-33-ns}
-- Microsoft Power BI [&nbsp;]{.smallcaps}
+- Microsoft Power BI
 :::
 
 ::: {.w-33-ns}
-- Looker <br>[coming soon]{.smallercaps}
+<!-- - Looker -->
 :::
 
 ::: {.w-33-ns}
-- Snowflake <br>[coming soon]{.smallercaps}
+<!-- - Snowflake -->
 :::
 ::::
 
@@ -69,12 +69,12 @@ Link to models in external registries and development platforms and keep invento
 
 ::: {.w-33-ns}
 - AWS SageMaker
-- Databricks <br>[coming soon]{.smallercaps}
+<!-- - Databricks -->
 :::
 
 ::: {.w-33-ns}
 - MLflow
-- AWS Bedrock <br>[coming soon]{.smallercaps}
+<!-- - AWS Bedrock -->
 :::
 
 ::: {.w-33-ns}
