--- a/site/guide/workflows/workflow-step-types.qmd
+++ b/site/guide/workflows/workflow-step-types.qmd
@@ -5,8 +5,7 @@ date: last-modified
 
 Select from a variety of workflow step types to build workflows from.
 
-::: {.callout}
-For more assistance configuring workflow step types, refer to:
+::: {.callout title="Need more help configuring workflow step types?"}
 
 - [Workflow configuration examples](workflow-configuration-examples.qmd#workflow-step-type-examples)
 - [Integrations examples](/guide/integrations/integrations-examples.qmd)
