Fix UI references

--- a/site/guide/integrations/manage-secrets.qmd
+++ b/site/guide/integrations/manage-secrets.qmd
@@ -21,16 +21,16 @@ You store each secret once and then reuse it across supported integrations.
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Go to **Integrations** > **Secrets**.
+2. Under Integrations, select **Integration Secrets**.
 
 3. Click **{{< fa plus >}} Add Secret**.
 
 4. Fill in the details:
 
-   - **Secret name** — Enter an easily identifiable label that indicates which system the secret belongs to.
-   - **Description** (optional) — Summarize when to use the secret or who owns it so other admins know whether it is safe to re-use.
-   - **Secret value** — Paste the credential exactly as issued by the external system. The value is encrypted and never displays it in plaintext again.
-   - **Expiration date** (optional) — Set a rotation reminder if the external system enforces key expiry.
+   - **[secret name]{.smallcaps}** — Enter an easily identifiable label that indicates which system the secret belongs to.
+   - **[description]{.smallcaps}** (optional) — Summarize when to use the secret or who owns it so other admins know whether it is safe to re-use.
+   - **[secret value]{.smallcaps}** — Paste the credential exactly as issued by the external system. The value is encrypted and never displays it in plaintext again.
+   - **[expiration date]{.smallcaps}** (optional) — Set a rotation reminder if the external system enforces key expiry.
 
 5. Click **Create Secret**. 
 
@@ -46,7 +46,7 @@ Recommended: Create a new secret and update integrations that should use it.<br>
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Go to **Integrations** > **Secrets**.
+2. Under Integrations, select **Integration Secrets**.
 
 3. Click the secret you want to view.
 
@@ -54,7 +54,7 @@ Recommended: Create a new secret and update integrations that should use it.<br>
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Go to **Integrations** > **Secrets**.
+2. Under Integrations, select **Integration Secrets**.
 
 3. Click the secret you want to change.
 
@@ -62,8 +62,8 @@ Recommended: Create a new secret and update integrations that should use it.<br>
 
 5. Make your changes. For example:
 
-   - **Secret value** — Paste a new value if the external platform issued a replacement token.
-   - **Expiration date** — Extend the expiry window if you want to keep the secret active for longer.
+   - **[secret value]{.smallcaps}** — Paste a new value if the external platform issued a replacement token.
+   - **[expiration date (optional)]{.smallcaps}** — Extend the expiry window if you want to keep the secret active for longer.
 
 6. Click **Update Secret** to save your changes. 
 
@@ -71,7 +71,7 @@ Recommended: Create a new secret and update integrations that should use it.<br>
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Go to **Integrations** > **Secrets**.
+2. Under Integrations, select **Integration Secrets**.
 
 3. Hover over the secret you want to change.
 
@@ -89,7 +89,7 @@ Be sure to update any connections that depend on this secret before deleting it.
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Go to **Integrations** > **Secrets**.
+2. Under Integrations, select **Integration Secrets**.
 
 3. Hover over the secret you want to remove.
 
