Minor consistency text edits

--- a/site/guide/integrations/configure-connections.qmd
+++ b/site/guide/integrations/configure-connections.qmd
@@ -94,7 +94,7 @@ Requires:
    - **[description]{.smallcaps}** (optional) — The intended usage or additional details.
    - [**Connection-specific fields**](#supported-connections), such as:
       - **[tracking uri]{.smallcaps}** — The identifiers needed for the connection.
-      - **[password]{.smallcaps}** — The secret that stores the API key, password, or token required by the external service.
+      - **[password]{.smallcaps}** — The secret that stores the secret key, password, or token required by the external service.
    - **[initial status]{.smallcaps}** — Set to `Operational` to enable immediately or `Disabled` if you plan to finish setup later.
 
 6. Click **Save Integration**. 
@@ -121,8 +121,8 @@ You can now [test the connection](#test-connections) to ensure it is working as 
 
 5. Make your changes. For example:
 
-   - **[tracking uri]{.smallcaps}** — The URI needed for the connection.
-   - **[password]{.smallcaps}** — The secret that stores the API key, password, or token required by the external service.
+   - **[tracking uri]{.smallcaps}** — Change the URI needed for the connection.
+   - **[password]{.smallcaps}** — Change the secret that stores the secret key, password, or token required by the external service.
 
 6. Click **Update Integration** to save your changes.
 
